done with modelling. This is the first draft. I still need to clean all the code

--- a/Property24/property24_wc/cleaning_data.ipynb
+++ b/Property24/property24_wc/cleaning_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,19 +14,13 @@
     "pd.set_option(\"display.max_columns\", None)\n",
     "pd.set_option(\"display.max_rows\", 200)\n",
     "\n",
-    "# pd.set_option(\"display.width\", 1000)\n",
-    "# pd.set_option(\"display.max_colwidth\", 1000)\n",
-    "\n",
-    "# pd.set_option(\"display.max_rows\", 200)\n",
-    "# pd.options.display.max_rows = None\n",
-    "\n",
     "# pd.reset_option(\"display.width\")\n",
     "# pd.reset_option(\"display.max_colwidth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1774,7 +1768,7 @@
        "2        NaN           NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5021,7 +5015,7 @@
    ],
    "source": [
     "# There are so many columns with so many missing values. We may we may not need all these columns.\n",
-    "# Let's identify the columns with 20000 missing values out of 25k expected values and removed them.\n",
+    "# Let's identify the columns with over 20000 missing values out of 25k expected values and removed them.\n",
     "columns_with_many_missing = df.columns[df.isnull().sum() > 20000]\n",
     "print(columns_with_many_missing)\n",
     "df.drop(columns_with_many_missing, axis=1, inplace=True)"
